# train

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TRAIN_OVERVIEW.md  alembic.ini  index.html  pyproject.toml  tailwind.config.ts
.vibe/: config.toml
.vibe/agents/: autotrain.toml  train.toml
.vibe/prompts/: autotrain.md  train.md
apps/macos/: Info.plist  Package.swift
apps/web/: package-lock.json  package.json
core/autotrain_core/: __init__.py  agents.py  config.py  db.py  guardrails.py  models.py  operator.py  projects.py  providers.py  ratchet.py  runner.py  schemas.py
core/train_core/: __init__.py  agents.py  config.py  (+11 more)
docs/: AUTOTRAIN_MACOS_APP_PLAN.md  BRAIN.md  CODING_STANDARDS.md  ENVIRONMENT.md  EXECUTION_BACKLOG.md  HANDOVER.md  IDEA_TO_PROJECT_TEMPLATE.md  MVP_TEST.md  OPEN_SOURCE.md  OPERATING_MODEL.md  PROOF_REPLY_CYCLE.md  PROOF_VIBE_CYCLE.md  RECOVERY.md  REPOSITORY_CONTRACT.md  ROUND_CONTRACT.md  RUNTIME_COMPONENT_PROJECTS.md  SECOND_PROOF.md  SETUP.md  SKILLS.md  STATUS.md  TECH_STACK.md  TRAIN_MACOS_APP_PLAN.md  TRINITY_FRONTIER_PROMOTION.md  TRINITY_REPLY_TRACE_CONTRACT.md  UI_UX_RECOVERY.md  train_macos_app_plan.md
migrations/: env.py
scripts/: check_providers.py  prove_reply_cycle.py  prove_second_project.py  prove_vibe_cycle.py  run_api.sh  run_vibe.py  test_mvp.py
tests/: test_agents.py  test_config.py  test_guardrails.py  test_operator.py  test_projects.py  test_providers.py  test_ratchet.py  test_trinity_reply_fixture_builder.py  test_trinity_trace_loader.py
tools/: build_trinity_reply_fixture.py
(+122 files in other folders)
